# interactive-analytics

./: .gitignore  README.md
interactive-vs-standard/: .env.example  README.md  iwtest.py  pyproject.toml  run-benchmark
interactive-vs-standard/spcs/: .dockerignore  Dockerfile  README.md  entrypoint.sh  service-spec.yaml
interactive-vs-standard/spcs/scripts/: build-and-push.sh  get-logs.sh  run-benchmark-spcs.sh  run_benchmark.sh
interactive-vs-standard/spcs/sql/: 00_setup_spcs.sql  10_run_benchmark.sql
interactive-vs-standard/sql/: schema-old.sql  setup-test-old.sql  setup-test.sql
tpc-h/: .gitignore  README.md  iwtpch.sh  pyproject.toml  run-benchmark.sh  tpc-h-results-1GB.json
tpc-h/queries/modern/: query_01.sql  query_02.sql  query_04.sql  query_06.sql  query_10.sql  query_11.sql  query_12.sql  query_15.sql  (+1 more)
tpc-h/results/: run_interactive_sf1000_original_20260712T100940Z.csv  run_interactive_sf1000_original_20260712T100940Z.json  run_interactive_sf100_original_20260712T100028Z.csv  run_interactive_sf100_original_20260712T100028Z.json  run_interactive_sf10_original_20260712T095527Z.csv  run_interactive_sf10_original_20260712T095527Z.json  run_interactive_sf1_original_20260712T095225Z.csv  run_interactive_sf1_original_20260712T095225Z.json  run_standard_sf1000_original_20260712T100607Z.csv  run_standard_sf1000_original_20260712T100607Z.json  run_standard_sf100_original_20260712T095834Z.csv  run_standard_sf100_original_20260712T095834Z.json  run_standard_sf10_original_20260712T095416Z.csv  run_standard_sf10_original_20260712T095416Z.json  run_standard_sf1_original_20260712T095124Z.csv  run_standard_sf1_original_20260712T095124Z.json
tpc-h/sql/: setup.sql  teardown.sql
tpc-h/src/: tpch_runner.py
tpch/: .env.example  .gitignore  README.md  pyproject.toml
tpch/sql/: setup-alternative-clustering.sql  setup.sql  teardown.sql
tpch/src/: __init__.py
(+27 files in other folders)
