[project]
name = "interactive-vs-stadard"
version = "0.1.0"
description = "A simple demo to showcase the high-concurrency, low-latency performance improvements of Interactive Tables vs regular tables"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "snowflake-connector-python[secure-local-storage]>=3.7",
]
