[project]
name = "iw-tpch"
version = "0.2.1"
description = "TPC-H benchmark runner for Snowflake interactive and standard warehouses"
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.7.0",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.6.0",
]

[project.scripts]
iw-tpch = "src.tpch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
