[project]
name = "iw-tpch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.7.0",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.6.0",
]

[project.scripts]
iw-tpch = "src.tpch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
